# mirson-website2md

./: .gitignore  CLAUDE.md  README.md  START_HERE.md  auto_crawl.py  auto_crawl_vba.py  pyproject.toml  quick_start.py  requirements.txt
specs/001-website-crawler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-website-crawler/checklists/: requirements.md
specs/001-website-crawler/contracts/: firecrawl-api.yaml
src/: __init__.py  auto_aggregator.py  auto_discoverer.py  cli.py  config.py  crawler.py  file_writer.py  firecrawl_client.py  markdown_optimizer.py  models.py  navigation_extractor.py  sequential_crawler.py  url_utils.py
tests/unit/: test_map_api_discovery.py  test_markdown_optimizer.py
